--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "onlineshop",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {    
-    "start": "node app.js" 
+    "start": "nodemon app.js"
   },
   "keywords": [],
   "author": "Miguel Pedraza",
@@ -23,5 +23,8 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
+  },
+  "engines": {
+    "node": ">=14"
   }
 }
