--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {    
-    "start": "nodemon app.js"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "keywords": [],
   "author": "Miguel Pedraza",
@@ -25,6 +26,6 @@
     "nodemon": "^2.0.20"
   },
   "engines": {
-    "node": ">=14"
+    "node": "16.x"
   }
 }
