--- a/package.json
+++ b/package.json
@@ -1,28 +1,31 @@
 {
-  "name": "onlineshop",
-  "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
-  "scripts": {    
-    "start": "node app.js",
-    "dev": "nodemon app.js"
-  },
-  "keywords": [],
-  "author": "Miguel Pedraza",
-  "license": "ISC",
-  "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "connect-mongodb-session": "^3.1.1",
-    "csurf": "^1.11.0",
-    "ejs": "^3.1.8",
-    "express": "^4.18.2",
-    "express-session": "^1.17.3",
-    "mongodb": "^4.13.0",
-    "multer": "^1.4.5-lts.1",
-    "stripe": "^11.8.0",
-    "uuid": "^9.0.0"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.20"
-  }
+	"name": "onlineshop",
+	"version": "1.0.0",
+	"description": "Online shop built using express",
+	"main": "app.js",
+	"engines": {
+		"node": "16.x"
+	},
+	"scripts": {
+		"start": "node app.js",
+		"dev": "nodemon app.js"
+	},
+	"keywords": [],
+	"author": "Miguel Pedraza",
+	"license": "ISC",
+	"dependencies": {
+		"bcryptjs": "^2.4.3",
+		"connect-mongodb-session": "^3.1.1",
+		"csurf": "^1.11.0",
+		"ejs": "^3.1.8",
+		"express": "^4.18.2",
+		"express-session": "^1.17.3",
+		"mongodb": "^4.13.0",
+		"multer": "^1.4.5-lts.1",
+		"stripe": "^11.8.0",
+		"uuid": "^9.0.0"
+	},
+	"devDependencies": {
+		"nodemon": "^2.0.20"
+	}
 }
